--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
 body {
   background-image: url("https://element5digital.com/wp-content/uploads/2014/12/Shopping-Online-Background-2.jpg");
 background-size: cover;
+background-repeat: no-repeat;
 }
